tests/baselines/reference/switchCaseCircularRefeference.errors.txt
tests/cases/compiler/switchCaseCircularRefeference.ts(5,10): error TS2678: Type '{ a: "A"; b: 任意; } | { a: "C"; e: 任意; }' is not comparable to type '文字'.
  Type '{ a: "C"; e: 任意; }' is not comparable to type '文字'.


==== tests/cases/compiler/switchCaseCircularRefeference.ts (1 errors) ====
    // Repro from #9507
    
    function f(x: {a: "A", b} | {a: "C", e}) {
        switch (x.a) {
        case x:
             ~
!!! error TS2678: Type '{ a: "A"; b: 任意; } | { a: "C"; e: 任意; }' is not comparable to type '文字'.
!!! error TS2678:   Type '{ a: "C"; e: 任意; }' is not comparable to type '文字'.
            break;
        }
    }